--- a/src/CaCom/CaCom.csproj
+++ b/src/CaCom/CaCom.csproj
@@ -2,8 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
+    <AssemblyVersion>0.1.1.0</AssemblyVersion>
+    <FileVersion>0.1.1.0</FileVersion>
+    <Version>0.1.1</Version>
+    <Authors>nakky</Authors>
+    <Description>NFC Module to Control NFC Reader/Writer.</Description>
+    <PackageProjectUrl>https://github.com/nakky/CaCom</PackageProjectUrl>
+    <PackageTags>NFC, PC/SC, NDEF</PackageTags>
   </PropertyGroup>
 
 </Project>
